--- a/mystery-message/package.json
+++ b/mystery-message/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.24",
+    "@google/generative-ai": "^0.12.0",
     "@react-email/components": "^0.0.19",
+    "ai": "^3.1.30",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
