--- a/mystery-message/package.json
+++ b/mystery-message/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^0.0.24",
     "@google/generative-ai": "^0.12.0",
     "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
